--- a/index.html
+++ b/index.html
@@ -8,7 +8,80 @@
     <title>Movies</title>
 </head>
 <body>
-    
+    <header>
+        <form  id="form">
+            <input type="text" id="search" class="search" placeholder="Search">
+        </form>
+    </header>
+    <main id="main">
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1664479070446-a51bad989b08?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=385&q=80" alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia mollitia numquam repellat consectetur nulla excepturi culpa fuga fugit doloremque quidem?
+            </div>
+        </div>
+    </main>
+
     <script src="./controller.js"></script>
 </body>
 </html>
